--- a/index.html
+++ b/index.html
@@ -705,6 +705,8 @@
                             <span style="font-size: 15px;">${createAspectDisplay(build.aspect3)}</span>
                         </div>
 
+                        <div style="margin-bottom: 15px; height: 40px;"></div>
+
                         <div style="border-top: 1px solid #2a2a2a; padding-top: 15px; margin-top: 15px;">
                             <strong style="color: #888; font-size: 13px; display: block; margin-bottom: 8px;">Forge Upgrades:</strong>
                             <div style="font-size: 14px; line-height: 1.8;">
@@ -776,6 +778,7 @@
     </script>
 </body>
 </html>
+
 
 
 
