--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
 
                 <div style="background-color: #0f0f0f; padding: 20px; border-radius: 8px; margin-bottom: 25px;">
                     <h4 style="color: #888; margin-bottom: 15px; text-align: center; font-size: 16px;">CHARMS</h4>
-                    <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 20px; align-items: center;">
+                    <div style="display: flex; justify-content: center; align-items: center; flex-wrap: wrap; gap: 30px; width: 100%;">
                         ${createCharmDisplay(build.charm1)}
                         ${createCharmDisplay(build.charm2)}
                     </div>
@@ -895,6 +895,7 @@
     </script>
 </body>
 </html>
+
 
 
 
