--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #0f0f0f;
-            color: white;
+            color: #c0c0c0;
         }
 
         /* Navbar */
@@ -43,7 +43,7 @@
         }
 
         .nav-links a {
-            color: white;
+            color: #b0b0b0;
             text-decoration: none;
             padding: 0 40px;
             display: flex;
@@ -99,6 +99,7 @@
             cursor: pointer;
             transition: background-color 0.2s;
             font-size: 14px;
+            color: #a8a8a8;
         }
 
         .filter-option img {
@@ -113,6 +114,7 @@
 
         .filter-option.active {
             background-color: #059669;
+            color: #ffffff;
         }
 
         /* Build Grid */
@@ -189,7 +191,7 @@
         }
 
         .build-info-value {
-            color: #fff;
+            color: #c0c0c0;
         }
 
         .build-card-footer {
@@ -253,7 +255,7 @@
         }
 
         .modal-close:hover {
-            color: #fff;
+            color: #c0c0c0;
         }
 
         .action-btn {
@@ -950,33 +952,3 @@
     </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
