--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             gap: 8px;
             padding: 8px 12px;
             margin-bottom: 5px;
-            background-color: #2C3539;
+            background-color: #2a3335;
             border-radius: 4px;
             cursor: pointer;
             transition: background-color 0.2s;
@@ -109,12 +109,12 @@
         }
 
         .filter-option:hover {
-            background-color: #3a4549;
+            background-color: #323939;
         }
 
         .filter-option.active {
             background-color: #059669;
-            color: #000;
+            color: white;
         }
 
         /* Build Grid */
@@ -129,7 +129,7 @@
 
         .build-card {
             background-color: #1a1a1a;
-            border: 3px solid #2a2a2a;
+            border: 2px solid #5a5a5a;
             border-radius: 8px;
             padding: 0;
             cursor: pointer;
@@ -141,7 +141,7 @@
 
         .build-card:hover {
             transform: translateY(-5px);
-            border-color: #059669;
+            border-color: #8b7355;
         }
 
         .build-card-content {
@@ -243,6 +243,7 @@
             max-width: 900px;
             border-radius: 8px;
             position: relative;
+            border: 2px solid #5a5a5a;
         }
 
         .modal-close {
@@ -260,7 +261,7 @@
 
         .action-btn {
             background-color: #059669;
-            color: #000;
+            color: white;
             border: none;
             padding: 10px 20px;
             border-radius: 4px;
@@ -281,12 +282,12 @@
         }
 
         .action-btn.share-btn {
-            background-color: #232a2e;
+            background-color: #2a3335;
             color: white;
         }
 
         .action-btn.share-btn:hover {
-            background-color: #313537;
+            background-color: #323939;
         }
 
         .modal-icon {
